<resources>
    <string name="app_name">PhotoBucket</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Rachel Zhang</string>
    <string name="nav_header_subtitle">zhangrj@rose-hulman.edu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_photos">Photos</string>
    <string name="menu_user">Profile</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_the_url">Enter the URL</string>
    <string name="remove">Remove</string>
    <string name="show">Show</string>
    <string name="url_here">URL here</string>
    <string name="caption_here">caption here</string>
    <string name="detail_caption">Detail Caption</string>
    <string name="name">Rachel Zhang</string>
    <string name="age">21 years old</string>
    <string name="profile_description">CS major</string>
    <string name="switch_string">Switch</string>
    <string name="settings">Settings</string>
    <string name="done">Done</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
</resources>