<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.UserFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/name"
        android:text="Your Profile"
        android:textSize="20sp"/>

    <TextView
        android:layout_marginTop="3dp"
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/center_image"
        android:text="@string/name"
        android:textSize="36sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/center_image"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_centerInParent="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/center_image"
        android:text="@string/age"
        android:layout_centerHorizontal="true"
        android:id="@+id/age"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age"
        android:text="@string/profile_description"
        android:layout_centerHorizontal="true"
        android:id="@+id/description"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_below="@id/description"
        android:layout_marginStart="20dp"/>

    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:layout_below="@id/description"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"/>


</RelativeLayout>